[package]
name = "singing-cells"
version = "0.1.0"
authors = ["dominicmkennedy <dominicmkennedy@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
# crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
cfg-if = "0.1.2"
itertools = "0.10.5"

console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  "console",
]

[profile.release]
lto = "thin"
