[package]
name = "singing-cells"
version = "0.1.0"
authors = ["dominicmkennedy <dominicmkennedy@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.66"
wasm-bindgen = "0.2.89"
cfg-if = "1.0.0"
itertools = "0.12.0"
rustysynth = "1.3.1"
tinyaudio = "0.1.2"
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.web-sys]
version = "0.3.66"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'console',
  'Performance',
  'PerformanceTiming',
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
]

[profile.release]
lto = true
